feat: Payment model up as record and adapted