@@ -9,11 +9,11 @@ import org.springframework.stereotype.Service;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class PaymentServiceImpl implements PaymentService {
     public static final String SAMPLE_CREDIT_CARD_NUMBER = "374245455400126";
+
     private final PaymentRepository paymentRepository;
     private final CreditCardProcessorRemoteService ccpRemoteService;
 
@@ -25,22 +25,29 @@ public class PaymentServiceImpl implements PaymentService {
 
     @Override
     public Payment process(Payment payment) {
-        BigDecimal totalPrice = payment.getProductPrice()
-                .multiply(new BigDecimal(payment.getProductQuantity()));
+        BigDecimal totalPrice = payment.productPrice()
+                .multiply(new BigDecimal(payment.productQuantity()));
         ccpRemoteService.process(new BigInteger(SAMPLE_CREDIT_CARD_NUMBER), totalPrice);
         PaymentEntity paymentEntity = new PaymentEntity();
         BeanUtils.copyProperties(payment, paymentEntity);
         paymentRepository.save(paymentEntity);
 
-        var processedPayment = new Payment();
-        BeanUtils.copyProperties(payment, processedPayment);
-        processedPayment.setId(paymentEntity.getId());
-        return processedPayment;
+        return new Payment(
+                paymentEntity.getId(),
+                payment.orderId(),
+                payment.productId(),
+                payment.productPrice(),
+                payment.productQuantity()
+        );
     }
 
     @Override
     public List<Payment> findAll() {
-        return paymentRepository.findAll().stream().map(entity -> new Payment(entity.getId(), entity.getOrderId(), entity.getProductId(), entity.getProductPrice(), entity.getProductQuantity())
-        ).collect(Collectors.toList());
+        return paymentRepository.findAll().stream()
+                .map(entity ->
+                        new Payment(entity.getId(), entity.getOrderId(), entity.getProductId(),
+                                entity.getProductPrice(), entity.getProductQuantity())
+                ).toList();
     }
+
 }
